# demo-ducklake

./: .env.sample  README.md  compose.yaml
apps/datalake-migrate/: entrypoint.sh  pyproject.toml
apps/datalake-migrate/src/: migration_0_init.py
apps/generator/: Dockerfile  pyproject.toml
apps/generator/src/: main.py
apps/minio-migrate/: Dockerfile
apps/minio-migrate/src/: users-policy.json
